@@ -3,6 +3,10 @@
 	* NEWS: Version 1.3.10 released.
 	* configure.ac (AC_INIT): Likewise.
 
+	* Makefile.am (check-local): Don't assume $(srcdir) is '.'.
+	(MAINTAINERCLEANFILES): Move gzip.doc.gz from here ...
+	(MOSTLYCLEANFILES): ... to here.
+
 2006-12-29  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* zless.in: Work around a bug in less 394 and earlier; it
